# vscode-python-tool-lsp

./: .gitignore  README.md
python/: pyproject.toml
python/tests/: test_execution.py  test_paths.py
python/vscode_python_tool_lsp/: __init__.py  debug_server.py  execution.py  jsonrpc.py  paths.py  runner.py  server.py  settings.py  streams.py
python/vscode_python_tool_lsp/testing/: __init__.py  constants.py  defaults.py  session.py  utils.py
typescript/: package-lock.json  package.json  tsconfig.json
typescript/src/: activation.ts  configWatcher.ts  index.ts  logging.ts  python.ts  server.ts  settings.ts  setup.ts  status.ts  types.ts  utilities.ts  vscodeapi.ts
typescript/test/: index.test.ts
