[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "vscode-python-tool-lsp"
version = "0.1.0"
description = "Shared LSP server framework for VS Code Python tool extensions"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Microsoft Corporation"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]
dependencies = [
    "pygls>=2.0.0",
    "lsprotocol>=2025.0.0",
    "packaging>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "nox>=2024.0",
    "black>=24.0",
    "isort>=5.0",
    "flake8>=7.0",
]

[tool.flit.module]
name = "vscode_python_tool_lsp"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
